--- a/multiplos/src/app/home/home.page.html
+++ b/multiplos/src/app/home/home.page.html
@@ -1,20 +1,44 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="fondo">
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div class="centered">
+    <div class="description">
+      <h1>Prueba App Developer</h1>
+      <p> Aplicación que recibe un parámetro y despliega los números que existan entre el 0 y el número ingresado.</p>
+    </div>
+
+    <ion-input 
+    label="Ingresa un número" 
+    label-placement="floating" 
+    fill="solid" 
+    type="number" 
+    [min]="0"  
+    [(ngModel)]="num">
+  </ion-input>
+  
+  <ion-button 
+    (click)="showNumbers()" 
+    [disabled]="num < 0"> <!-- Deshabilita el botón si num es menor a 0 -->
+    Mostrar números
+  </ion-button>
+  
+
+  <ion-grid>
+    <ion-row>
+      <ng-container *ngFor="let item of list">
+        <ion-col size="3" size-md="1" size-lg="1">
+          <ion-card [style.background-color]="item.color" >
+            <ion-card-content class="center-content">
+              {{ item.value }}
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ng-container>
+    </ion-row>
+  </ion-grid>
+  
+    
+    
   </div>
 </ion-content>
