--- a/multiplos/src/app/home/home.page.scss
+++ b/multiplos/src/app/home/home.page.scss
@@ -1,27 +1,33 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+.centered {
+  display: flex;
+  flex-direction: column; /* Asegura que los elementos se apilen verticalmente */
+  justify-content: center;
+  align-items: center; /* Centra los elementos en el eje horizontal */
+  padding-top: 5%; /* Añade un espacio superior */
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.description{
+  color: #9efff0;
+}
+ion-content{
+  --background:rgb(71, 71, 71);
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+ion-input{
+  width: 20%;
 }
 
-#container a {
-  text-decoration: none;
+
+.center-content {
+  display: flex;
+  align-items: center;  /* Centra verticalmente */
+  justify-content: center;  /* Centra horizontalmente */
+  height: 100%;  /* Asegura que la tarjeta ocupe toda la altura */
+  font-size: 1.5rem;  /* Puedes ajustar el tamaño del texto según tus necesidades */
+  text-align: center;  /* Asegura que el texto esté centrado */
+  color: white;
+}
+
+ion-col{
+  min-width: 100px;
 }
