--- a/multiplos/src/app/home/home.page.scss
+++ b/multiplos/src/app/home/home.page.scss
@@ -10,11 +10,12 @@
   color: #9efff0;
 }
 ion-content{
-  --background:rgb(71, 71, 71);
+  --background:rgb(49, 49, 49);
 }
 
 ion-input{
   width: 20%;
+  margin-bottom: 0.5%;
 }
 
 
