--- a/multiplos/src/app/home/home.page.html
+++ b/multiplos/src/app/home/home.page.html
@@ -20,7 +20,7 @@
   <ion-button 
     (click)="showNumbers()" 
     [disabled]="num < 0"> <!-- Deshabilita el botón si num es menor a 0 -->
-    Mostrar listado
+    Buscar números
   </ion-button>
   
 
