--- a/multiplos/src/app/home/home.page.html
+++ b/multiplos/src/app/home/home.page.html
@@ -6,10 +6,9 @@
       <p> Aplicación que recibe un parámetro y despliega los números que existan entre el 0 y el número ingresado.</p>
     </div>
 
-    <ion-input label="Ingresa un número" label-placement="floating" fill="solid" type="number" [min]="0"
+      <ion-input label="Ingresa un número" label-placement="floating" fill="solid" type="number" [min]="0"
       [(ngModel)]="num">
     </ion-input>
-
     <div class="buttons">
       <ion-button (click)="showNumbers()" [disabled]="num < 0"> <!-- Deshabilita el botón si num es menor a 0 -->
         Mostrar listado
@@ -20,7 +19,10 @@
       </ion-button>
   
     </div>
-
+    <div class="message">
+      {{message}}
+    </div>
+    
     <ion-grid>
       <ion-row>
         <ng-container *ngFor="let item of list">
