--- a/multiplos/src/app/home/home.page.scss
+++ b/multiplos/src/app/home/home.page.scss
@@ -14,6 +14,12 @@
 .description{
   color: #9efff0;
 }
+
+.message{
+  padding: 1%;
+  color: yellow;
+  height: 30px;
+}
 ion-content{
   --background:rgb(49, 49, 49);
 }
