--- a/multiplos/src/app/home/home.page.html
+++ b/multiplos/src/app/home/home.page.html
@@ -7,14 +7,14 @@
     </div>
 
       <ion-input label="Ingresa un número" label-placement="floating" fill="solid" type="number" [min]="0"
-      [(ngModel)]="num">
+      [(ngModel)]="enteredNumber">
     </ion-input>
     <div class="buttons">
-      <ion-button (click)="showNumbers()" [disabled]="num < 0"> <!-- Deshabilita el botón si num es menor a 0 -->
+      <ion-button (click)="showNumbers()" [disabled]="enteredNumber < 0"> <!-- Deshabilita el botón si num es menor a 0 -->
         Mostrar listado
       </ion-button>
   
-      <ion-button (click)="deleteNumbers()" color="danger" [disabled]="num < 0"> <!-- Deshabilita el botón si num es menor a 0 -->
+      <ion-button (click)="deleteNumbers()" color="danger" [disabled]="enteredNumber < 0"> <!-- Deshabilita el botón si num es menor a 0 -->
         Borrar
       </ion-button>
   
