--- a/multiplos/src/app/home/home.page.html
+++ b/multiplos/src/app/home/home.page.html
@@ -10,12 +10,12 @@
       [(ngModel)]="enteredNumber">
     </ion-input>
     <div class="buttons">
-      <ion-button (click)="showNumbers()" [disabled]="enteredNumber < 0"> <!-- Deshabilita el botón si num es menor a 0 -->
-        Mostrar listado
+      <ion-button (click)="showNumbers()" [disabled]="enteredNumber < 0">
+        Generar listado
       </ion-button>
   
-      <ion-button (click)="deleteNumbers()" color="danger" [disabled]="enteredNumber < 0"> <!-- Deshabilita el botón si num es menor a 0 -->
-        Borrar
+      <ion-button (click)="deleteNumbers()" color="danger" > 
+        Reiniciar valores
       </ion-button>
   
     </div>
